Added footer using Bootstrap card class to all 3 pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,12 +67,17 @@
                 </div>
             </div>
         </div>
-    <div class="row">
-       <div class="col-md-12">
-            <p class="text-center">Copyright <i class="fa fa-copyright"></i></p>
-       </div>
-       </div>
-    </div>
+        <footer class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="text-center">
+                        <p class="text-center">Copyright <i class="fa fa-copyright"></i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </div>
 
 </body>
