--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-md-12">
                   <label for="exampleInputEmail1">Name</label>
-                  <input type="text" class="form-control" placeholder="Name">
+                  <input type="text" class="form-control mb-3" placeholder="Name">
                 </div>
             </div>
             <div class="form-group">
@@ -49,16 +49,21 @@
                     <label for="exampleFormControlTextarea1">Message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
             </div>
-            <button type="Submit" class="btn btn-primary">Submit</button>
+            <button type="Submit" class="btn btn-primary mb-3">Submit</button>
         </form>
        </div>
     </div>
-    <div class="row">
-       <div class="col-md-12">
-            <p class="text-center">Copyright <i class="fa fa-copyright"></i></p>
-       </div>
-       </div>
-    </div>
+    <footer class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="text-center">
+                    <p class="text-center">Copyright <i class="fa fa-copyright"></i></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 
 </body>
