--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Patrick Venkat</a>
+                <a class="navbar-brand" href="#" id=header-style>Patrick Venkat</a>
             </div>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
