--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Patrick Venkat</a>
+                <a class="navbar-brand" href="#" id=header-style>Patrick Venkat</a>
             </div>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
@@ -35,7 +35,7 @@
        <div class="col-md-12">
            <h1>About Me</h1>
            <div class="media">
-               <img src="images/cat.jpg" class="mr-3 img-fluid" alt="Responsive image">
+               <img src="images/cat.jpg" class="mr-3" alt="Responsive image" id="bio-image">
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris.</p>
            </div>
        </div>
