--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Patrick Venkat</a>
+                <a class="navbar-brand" href="#" id=header-style>Patrick Venkat</a>
             </div>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
@@ -39,20 +39,20 @@
     <div class="row">
         <div class="media">
             <div class="col-md-6">
-                <img src="images/technics-q-c-640-480-1.jpg" class="mr-3 mb-5 img-fluid" alt="Responsive image">
+                <img src="images/technics-q-c-640-480-1.jpg" class="mb-3 img-fluid img-thumbnail" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="images/technics-q-c-640-480-2.jpg" class="mr-3 mb-5 img-fluid" alt="Responsive image">
+                <img src="images/technics-q-c-640-480-2.jpg" class="mb-3 img-fluid  img-thumbnail" alt="Responsive image">
             </div>
         </div>
     </div>
     <div class="row">
         <div class="media">
             <div class="col-md-6">
-                <img src="images/technics-q-c-640-480-5.jpg" class="mr-3 mb-5 img-fluid" alt="Responsive image">
+                <img src="images/technics-q-c-640-480-5.jpg" class="mb-5 img-fluid img-thumbnail" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="images/technics-q-c-640-480-7.jpg" class="mr-3 mb-5 img-fluid" alt="Responsive image">
+                <img src="images/technics-q-c-640-480-7.jpg" class="mb-5 img-fluid img-thumbnail" alt="Responsive image">
             </div>
         </div>
     </div>
@@ -60,10 +60,10 @@
     <div class="row">
             <div class="media">
                 <div class="col-md-6">
-                    <img src="images/technics-q-c-640-480-9.jpg" class="mr-3 mb-5 img-fluid" alt="Responsive image">
+                    <img src="images/technics-q-c-640-480-9.jpg" class="mb-5 img-fluid img-thumbnail" alt="Responsive image">
                 </div>
                 <div class="col-md-6">
-                    <img src="images/technics-q-c-640-480-7.jpg" class="mr-3 mb-5 img-fluid" alt="Responsive image">
+                        <img src="images/technics-q-c-640-480-9.jpg" class="mb-5 img-fluid img-thumbnail" alt="Responsive image">
                 </div>
             </div>
         </div>
